<resources>
    <string name="app_name">Utemaning</string>
    <string name="start_text">Utemaning</string>
    <string name="map">Hitta utmaning</string>
    <string name="profile">Profil</string>
    <string name="challenges">Mina utmaningar</string>
    <string name="challenges_start_page">Mina \nutmaningar</string>
    <string name="find_challenges">Hitta utmaning</string>
    <string name="find_challenges_start_page">Hitta \nutmaning</string>
    <string name="add_challenge">Skapa utmaning</string>
    <string name="add_challenge_start_page">Skapa \nutmaning</string>
    <string name="back_button">Back_button</string>
    <string name="main_title">Utemaning</string>
    <string name="map_title">Hitta utmaning</string>
    <string name="profile_title">Profil</string>
    <string name="visa_mer">+ Visa mer</string>
    <string name="description">* Beskrivning</string>
    <string name="location">* Välj plats</string>
    <string name="time">Tid</string>
    <string name="datum">Datum</string>
    <string name="challenge">* Utmaning</string>
    <string name="cancel">Avbryt</string>
    <string name="create">Skapa</string>
    <string name="logout">Logga ut</string>
    <string name="active_challenges">Aktiva utmaningar</string>
    <string name="completed_challenges">Avklarade utmaningar</string>
    <string name="challenger_carla">\@ChallengerCarla</string>
    <string name="cancel_message">Du har osparade ändringar. \n Är du säker på att du vill avbryta?</string>
    <string name="choose_amount_stars">Välj antal stjärnor</string>
    <string name="cancel_rankgym">Hoppa över</string>
    <string name="accept_rankgym">Ge betyg</string>
    <string name="rank_gym_button">Betygsätt</string>
    <string name="no_descr_avail">Ingen beskrivning tillgänglig!</string>
    <string name="challengesFinishedNone">Inga avklarade utmaningar!</string>
    <!--<string-array name="spinner_list_item_array">-->
        <!--<item>Ett</item>-->
        <!--<item>Två</item>-->
        <!--<item>Tre</item>-->
        <!--<item>Fyra</item>-->
    <!--</string-array>-->
    
</resources>